--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //Amplify Core Dependencies
+        implementation 'com.amplifyframework:core:1.4.0'
+        implementation 'com.amplifyframework:aws-auth-cognito:1.4.0'
     }
 }
 
