--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,6 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
         implementation 'androidx.core:core-ktx:1.3.2'
         implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -20,19 +18,13 @@ buildscript {
         testImplementation 'junit:junit:4.+'
         androidTestImplementation 'androidx.test.ext:junit:1.1.2'
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-
-        //Amplify Core Dependencies
-        implementation 'com.amplifyframework:core:1.4.0'
-        implementation 'com.amplifyframework:aws-auth-cognito:1.4.0'
     }
 }
 
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions' //  <== add this line
 }
 
 android {
