--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,23 +8,15 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        implementation 'androidx.core:core-ktx:1.3.2'
-        implementation 'androidx.appcompat:appcompat:1.2.0'
-        implementation 'com.google.android.material:material:1.2.1'
-        implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-        implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
-        implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
-        testImplementation 'junit:junit:4.+'
-        androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-android-extensions' //  <== add this line
+    id 'org.jetbrains.kotlin.android'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
