--- a/settings.gradle
+++ b/settings.gradle
@@ -5,14 +5,12 @@ pluginManagement {
         mavenCentral()
     }
 }
-/*dependencyResolutionManagement {
+dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
     }
 }
-*/
-
 rootProject.name = "Group Trip Scheduler"
 include ':app'
